fix spacing form

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
 /* Set a background image by replacing the URL below */
-body {
-    
-  }
+.app-title{
+    font-family: lobster;
+}
